--- a/views/confirmed.ejs
+++ b/views/confirmed.ejs
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Page</title>
+    <title>Confirmed</title>
 
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <!-- <script type="text/javascript" src=""></script> -->
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <h1>Thanks for your order </h1>
+    <h2>Your Order will be ready soon </h2>
+    <img src = '/home/z79liu/lighthouse/midterm_project_name/public/images/restaurant'>
   </body>
 </html>
