--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bela Lugosi's Fed</title>
+    <title>home page</title>
 
-    <!--Normalize -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
-    <!--Border Box -->
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
 
-    <!--Layout -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <!--CSS pages -->
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/footer.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/home.css" type="text/css"/>
 
-    <!--Javascript files -->
+    <!--Javascript -->
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-
-    <script type="text/javascript" src="/scripts/app.js"></script>
 
     <% include ../views/partials/_header %>
 
