--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
         <button type="submit" class="btn btn-danger">Order Now </button>
       </div>
     </form>
-    
+    <span>Hi</span>
     <div><img src = '/home/z79liu/lighthouse/midterm_project_name/public/images/restaurant'>
     </div>
   </body>
