added some post routes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,6 +13,12 @@
 
   <body>
     <h1>Welcome to our app</h1>
+    <form method="GET" action="/register">
+      <div class="form-group mb-2">
+        <button type="submit" class="btn btn-danger">Register </button>
+      </div>
+    </form>
+
     <form method="GET" action="/menu">
       <div class="form-group mb-2">
         <button type="submit" class="btn btn-danger">Menu </button>
