--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,18 +16,14 @@
     <form action="/register" method="POST">
         <div class="form-group">
             <label for="phone">Phone Number</label>
-            <input type="tel" class="form-control" name ="tel" id="tel" placeholder="Set a Password">
+            <input type="tel" class="form-control" name ="phone" id="tel" placeholder="Enter your Phone Number">
           </div>
       <div class="form-group">
-        <label for="email1">Email address:</label>
-        <input type="email" class="form-control" name ="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <label for="name">Email address:</label>
+        <input type="text" class="form-control" name ="name" id="exampleInputEmail1"  placeholder="Enter Your name">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your name with anyone else.</small>
       </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" name ="password" id="exampleInputPassword1" placeholder="Set a Password">
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" value="Submit">Submit</button>
     </form>
   </body>
 </html>
