--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>home page</title>
+    <title>Home Page</title>
 
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
@@ -19,9 +19,10 @@
 
   </head>
 
-
-
   <body>
 
+    <img src="https://i.pinimg.com/originals/8c/a5/87/8ca587d0f5503f3e0676ef8eae18c664.jpg">
+
   </body>
+
 </html>
