--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,14 +1,16 @@
-<!-- views/partials/header.ejs -->
 
-  <header>
-    <div class="logo">
-     <img src="http://placekitten.com/50/50">
-     BELA LUGOSI'S FED
-    </div>
+<header>
+  <div class="logo">
+    <img src="http://placekitten.com/50/50">
+  </div>
+    <span class="title"><h1>Bela Lugosi's Fed</h1></span>
 
+  <nav id="nav-bar">
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/menu">Menu</a></li>
       <li><a href="/order">Order</a></li>
     </ul>
-  </header>
+  </nav>
+
+</header>
