usernames being added to db in 'users' table

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,13 +13,13 @@
   <body style="font-size:20px; padding:50px;">
 
     <h1>Please Register</h1>
-    <form action="/register" method="POST">
-        <div class="form-group">
-            <label for="phone">Phone Number</label>
-            <input type="tel" class="form-control" name ="phone" id="tel" placeholder="Enter your Phone Number">
-          </div>
+    <form action="/api/users/register" method="POST">
       <div class="form-group">
-        <label for="name">Email address:</label>
+        <label for="phone">Phone Number</label>
+        <input type="tel" class="form-control" name ="phone" id="tel" placeholder="Enter your Phone Number">
+      </div>
+      <div class="form-group">
+        <label for="name">Name</label>
         <input type="text" class="form-control" name ="name" id="exampleInputEmail1"  placeholder="Enter Your name">
         <small id="emailHelp" class="form-text text-muted">We'll never share your name with anyone else.</small>
       </div>
