added header and footer partials to all the main pages and edited the head to include all css style pages and necessary information

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -16,8 +16,9 @@ h1 {
 }
 
 #nav-bar {
-  margin-top: -58px;
-  float: right
+  margin-top: -50px;
+  float: right;
+  font-size: 20px;
 }
 
 ul {
@@ -28,7 +29,7 @@ li {
   list-style:none;
   display: inline;
   color: white;
-  padding: 10px;
+  padding: 10px 10px;
 }
 
 a {
