--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,15 @@
   <head>
     <title>Home Page</title>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <!--Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
 
@@ -14,15 +23,17 @@
 
     <!--Javascript -->
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-
-    <% include ../views/partials/_header %>
+      
+    <!-- Meta Information -->
+    <title>Bela Lugosi's Fed</title>
 
   </head>
 
   <body>
-
-    <img src="https://i.pinimg.com/originals/8c/a5/87/8ca587d0f5503f3e0676ef8eae18c664.jpg">
-
+    <% include ../views/partials/_header %>
+      <img src="https://i.pinimg.com/originals/8c/a5/87/8ca587d0f5503f3e0676ef8eae18c664.jpg">
+    <% include ../views/partials/_footer %>
+  
   </body>
 
 </html>
