--- a/views/order.ejs
+++ b/views/order.ejs
@@ -1,67 +1,53 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="<fill this in>">
-    <meta name="author" content="<fill this in>">
+<head>
+  <title>Order Page</title>
 
-    <style>
-      nav a {
-        float: right;
-      }
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      main {
-        padding-top: 100px;
-      }
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-      main article {
-        padding-bottom: 100px;
-      }
+  <!--Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  
+  <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+  <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
 
-      main article .quantity {
-        float: left;
-      }
+  <!--CSS pages -->
+  <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
+  <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
+  <link rel="stylesheet" href="/styles/footer.css" type="text/css"/>
+  <link rel="stylesheet" href="/styles/order.css" type="text/css"/>
 
-      main article .menu-item {
-        float: left;
-      }
+  <!--Javascript -->
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    
+  <!-- Meta Information -->
+  <title>Bela Lugosi's Fed</title>
+  
+</head>
 
-      main article img {
-        float: left;
-      }
-
-      footer h4 {
-        float: right;
-      }
-    </style>
-  </head>
   <body>
-    <nav>
-      <img src="http://placekitten.com/408/287"/ height=50px width=50px>
-      <span>Drax's Snax</span>
-      <a href="/menu">Place Order</a>
-      <a href="/order">Menu</a>
-    </nav>
-    <main>
-      <article>
-        <img src="http://placekitten.com/408/287" height=50px width=50px/>
-        <p class="quantity">3</p>
-        <img src="http://placekitten.com/408/287" height=50px width=50px/>
-        <p class="menu-item"> MENU ITEM HERE</p>
-      </article>
-      <article>
-        <img src="http://placekitten.com/408/287" height=50px width=50px/>
-        <p class="quantity">3</p>
-        <img src="http://placekitten.com/408/287" height=50px width=50px/>
-        <p class="menu-item"> MENU ITEM HERE</p>
-      </article>
+  <% include ../views/partials/_header %>
+    <article>
+      <img src="http://placekitten.com/408/287" height=50px width=50px/>
+      <p class="quantity">3</p>
+      <img src="http://placekitten.com/408/287" height=50px width=50px/>
+      <p class="menu-item"> Menu Item</p>
+    </article>
+    <article>
+      <img src="http://placekitten.com/408/287" height=50px width=50px/>
+      <p class="quantity">3</p>
+      <img src="http://placekitten.com/408/287" height=50px width=50px/>
+      <p class="menu-item"> Menu Item</p>
+    </article>
 
-      <button href="/order">Confirm Order</button>
-    </main>
-    <footer>
-      <h2> Contact Information </h2>
-      <h4> Phone Number: 416-383-5730 </h4>
-      <h4> Email: <a href="">hello@example.com</a></h4>
-    </footer>
+    <button href="/order">Confirm Order</button>
+  
+    <% include ../views/partials/_footer %>
+ 
   </body>
+
 </html>
