--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -1,39 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"><
 <head>
-  <title>Don't be so ghoulish!</title>
+  <title>Checkout Page</title>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+  <!--Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  
+  <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+  <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
+
+  <!--CSS pages -->
+  <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
+  <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
+  <link rel="stylesheet" href="/styles/footer.css" type="text/css"/>
+  <link rel="stylesheet" href="/styles/checkout.css" type="text/css"/>
+
+  <!--Javascript -->
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    
+  <!-- Meta Information -->
+  <title>Bela Lugosi's Fed</title>
 </head>
-<body>
-  <header>
-    <nav>
-      <span>Menu</span>
-      <span>Checkout</span>
-    </nav>
-  </header>
-  <div>
-    <h2>Order Summary</h2>
-    <ul>
-      <li>Leg of Human x2</li>
-      <li>Rump of Man x1</li>
-      <li>Blood-soaked Crab Cakes (6) x1</li>
-      <li>English Breakfast Tea x3</li>
-      <li>Peach Cheesecake x1</li>
-    </ul>
-    <button type="submit">Edit</button>
-  </div>
-  <h2>User Info</h2>
-  <form>
-    <label for="Name">Name</label>
-    <input type="text" name="Name" />
-    <label for="Phone No.">Phone No.</label>
-    <input type="text" name="Phone No." />
-    <label for="confirm">Confirm</label>
-    <input type="Submit" name="confirm"/>
-  </form>
-  <footer>
-      <span>Facebook</span>
-      <span>Instaghoul</span>
-      <span>Pinterest</span>
-  </footer>
-</body>
+
+  <body>
+  <% include ../views/partials/_header %>
+    <header>
+      <nav>
+        <span>Menu</span>
+        <span>Checkout</span>
+      </nav>
+    </header>
+    <div>
+      <h2>Order Summary</h2>
+      <ul>
+        <li>Leg of Human x2</li>
+        <li>Rump of Man x1</li>
+        <li>Blood-soaked Crab Cakes (6) x1</li>
+        <li>English Breakfast Tea x3</li>
+        <li>Peach Cheesecake x1</li>
+      </ul>
+      <button type="submit">Edit</button>
+    </div>
+    <h2>User Info</h2>
+    <form>
+      <label for="Name">Name</label>
+      <input type="text" name="Name" />
+      <label for="Phone No.">Phone No.</label>
+      <input type="text" name="Phone No." />
+      <label for="confirm">Confirm</label>
+      <input type="Submit" name="confirm"/>
+    </form>
+
+  <% include ../views/partials/_header %>
+  </body>
 </html>
