changed formatting of add and delte button

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -53,16 +53,16 @@
     <main>
       <form method="post" action="">
         <div>
+          <label for="name">French Hens</label>
           <input type="text" name="vampire food" id="french-hens" value="3">
-          <!-- <label for="name">French Hens</label> -->
         </div>
         <div>
+          <label for="name">Turtle Doves</label>
           <input type="text" name="burger" id="turtle-doves" value="2">
-          <!-- <label for="name">Turtle Doves</label> -->
         </div>
         <div>
+           <label for="name">Partridges</label>
           <input type="text" name="eating" id="partridge" value="1">
-          <!-- <label for="name">Partridges</label> -->
         </div>
         <input type="submit" value="Submit" id="submit">
       </form>
