working on adding cookies sessions

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,6 +10,7 @@
       <li><a href="/">Home</a></li>
       <li><a href="/menu">Menu</a></li>
       <li><a href="/order">Order</a></li>
+      <li><a href="/register">Register</a></li>
     </ul>
   </nav>
 
