--- a/views/order.ejs
+++ b/views/order.ejs
@@ -26,25 +26,34 @@
 
      <!-- Application JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <style>
+      article form div input {
+        text-align: center;
+      }
+    </style>
 
   </head>
 
   <body>
   <% include ../views/partials/_header %>
     <article>
-      <img src="http://placekitten.com/408/287" height=50px width=50px/>
-      <p class="quantity">3</p>
-      <img src="http://placekitten.com/408/287" height=50px width=50px/>
-      <p class="menu-item"> Menu Item</p>
-    </article>
-    <article>
-      <img src="http://placekitten.com/408/287" height=50px width=50px/>
-      <p class="quantity">3</p>
-      <img src="http://placekitten.com/408/287" height=50px width=50px/>
-      <p class="menu-item"> Menu Item</p>
-    </article>
+      <form method="post" action="/order">
+        <div>
+          <label for="name">French Hens</label>
+          <input type="text" name="french-hens" id="french-hens" maxlength="3" size="2" value="0">
+        </div>
+        <div>
+          <label for="name">Turtle Doves</label>
+          <input type="text" name="turtle-doves" id="turtle-doves" maxlength="3" size="2" value="0">
+        </div>
+        <div>
+          <label for="name">Partridges</label>
+          <input type="text" name="partridge" id="partridge" maxlength="3" size="2" value="0">
+        </div>
 
-    <button href="/order">Confirm Order</button>
+        <input type="submit" value="Checkout" id="submit">
+      </form>
+    </article>
 
     <% include ../views/partials/_footer %>
   </body>
