--- a/views/order.ejs
+++ b/views/order.ejs
@@ -40,15 +40,16 @@
       <form method="post" action="/order">
         <div>
           <label for="name">French Hens</label>
-          <input type="text" name="french-hens" id="french-hens" maxlength="3" size="2" value="0">
+          <input type="text" name="french-hens" data-animal-type="French Hens"
+           maxlength="3" size="2" value="0">
         </div>
         <div>
           <label for="name">Turtle Doves</label>
-          <input type="text" name="turtle-doves" id="turtle-doves" maxlength="3" size="2" value="0">
+          <input type="text" name="turtle-doves" data-animal-type="Turtle Doves" maxlength="3" size="2" value="0">
         </div>
         <div>
           <label for="name">Partridges</label>
-          <input type="text" name="partridge" id="partridge" maxlength="3" size="2" value="0">
+          <input type="text" name="partridge" data-animal-type="Patridges" maxlength="3" size="2" value="0">
         </div>
 
         <input type="submit" value="Checkout" id="submit">
