changed quantity cell to floating number instead of input

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -67,7 +67,8 @@
         <td>Slayer Soup</td>
         <td>$9.99</td>
         <td class="quantity">
-          <input id='asdasd' type="text" name="quantity" maxlength="3" size="2" value ="0">
+          <span>0</span>
+          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
         </td>
         <td class="minus"><i class="fas fa-minus-circle"></i></td>
         <td class="plus"><i class="fas fa-plus-circle"></i></td>
@@ -75,7 +76,8 @@
         <td>Depression</td>
         <td>$9.99</td>
         <td>
-          <input type="text" name="quantity" maxlength="3" size="2" value ="0">
+          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+          <span>0</span>
         </td>
         <td class="minus"><i class="fas fa-minus-circle"></i></td>
         <td class="plus"><i class="fas fa-plus-circle"></i></td>
@@ -83,7 +85,8 @@
         <td>Bark of Tree</td>
         <td>$9.99</td>
         <td>
-          <input type="text" name="quantity" maxlength="3" size="2" value ="0">
+          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+          <span>0</span>
         </td>
         <td class="minus"><i class="fas fa-minus-circle"></i></td>
         <td class="plus"><i class="fas fa-plus-circle"></i></td>
@@ -91,7 +94,8 @@
         <td>Shrek's Ear Wax</td>
         <td>$9.99</td>
         <td>
-          <input type="text" name="quantity" maxlength="3" size="2" value ="0">
+          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+          <span>0</span>
         </td>
         <td class="minus"><i class="fas fa-minus-circle"></i></td>
         <td class="plus"><i class="fas fa-plus-circle"></i></td>
@@ -99,7 +103,8 @@
         <td>Tail of Lizard</td>
         <td>$9.99</td>
         <td>
-          <input type="text" name="quantity" maxlength="3" size="2" value ="0">
+          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+          <span>0</span>
         </td>
         <td class="minus"><i class="fas fa-minus-circle"></i></td>
         <td class="plus"><i class="fas fa-plus-circle"></i></td>
@@ -107,7 +112,8 @@
         <td>Leg of Man</td>
         <td>$9.99</td>
         <td>
-          <input type="text" name="quantity" maxlength="3" size="2" value ="0">
+          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+          <span>0</span>
         </td>
         <td class="minus"><i class="fas fa-minus-circle"></i></td>
         <td class="plus"><i class="fas fa-plus-circle"></i></td>
