--- a/views/order.ejs
+++ b/views/order.ejs
@@ -64,7 +64,7 @@
         <th>Plus</th>
       </tr>
       <tr>
-        <td>Slayer Soup</td>
+        <td id="1">Slayer Soup</td>
         <td>$9.99</td>
         <td class="quantity">
           <span>0</span>
@@ -73,7 +73,7 @@
         <td class="minus"><i class="fas fa-minus-circle"></i></td>
         <td class="plus"><i class="fas fa-plus-circle"></i></td>
       </tr><tr>
-        <td>Depression</td>
+        <td id>Blood Punch</td>
         <td>$9.99</td>
         <td>
           <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
@@ -119,6 +119,10 @@
         <td class="plus"><i class="fas fa-plus-circle"></i></td>
       </tr>
     </table>
+    <form action="/checkout" method="post">
+       <button type="submit">Checkout</button>
+    </form>
+
     <% include ../views/partials/_footer %>
   </body>
 
