--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -23,7 +23,8 @@
 
   <!--Javascript -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    
+  <script type="text/javascript" src="/scripts/checkout.js"></script>
+
   <!-- Meta Information -->
   <title>Bela Lugosi's Fed</title>
 </head>
@@ -38,8 +39,8 @@
     </header>
     <div>
       <h2>Order Summary</h2>
-      <ul>
-        <li>Leg of Human x2</li>
+      <ul class = 'summary'>
+        <li></li>
         <li>Rump of Man x1</li>
         <li>Blood-soaked Crab Cakes (6) x1</li>
         <li>English Breakfast Tea x3</li>
@@ -57,6 +58,6 @@
       <input type="Submit" name="confirm"/>
     </form>
 
-  <% include ../views/partials/_header %>
+  <% include ../views/partials/_footer %>
   </body>
 </html>
