working on hmtl and css for menu

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,3 +1,6 @@
+footer {
+    margin: 4% 4% 15% 4%;
+}
 
 .fa {
     padding: 0 3px 0 3px;
@@ -10,6 +13,6 @@
 
 i {
     margin-right: -33px;
-    padding: 95px 47px 0px 31px;
+    padding: 20px 47px 0px 31px;
 }
 
