--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Menu</title>
 
@@ -7,85 +8,172 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
   <!--Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-  
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
 
   <!--CSS pages -->
-  <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
-  <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
-  <link rel="stylesheet" href="/styles/footer.css" type="text/css"/>
-  <link rel="stylesheet" href="/styles/menu.css" type="text/css"/>
+  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/menu.css" type="text/css" />
 
   <!--Javascript -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    
+
   <!-- Meta Information -->
   <title>Bela Lugosi's Fed</title>
 
 </head>
 
 <body>
-<% include ../views/partials/_header %>
-  <main class="container">
+  <% include ../views/partials/_header %>
+
+
+  <div class="flex">
+      <div class="containerSize">
+        <div class="hideImageStuff">
+          <img class ="imageSize" src="https://images.pexels.com/photos/617278/pexels-photo-617278.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+        </div>
+        <h1></h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        </p>
+      </div>
+      <div class="containerSize">
+        <div class="hideImageStuff">
+          <img class ="imageSize" src="https://images.immediate.co.uk/volatile/sites/4/2018/08/iStock_000044061370_Medium-fa5f8aa.jpg?quality=45&crop=5px,17px,929px,400px&resize=960,413">
+        </div>
+        <h1></h1>
+        <p>
+    
+        </p>
+      </div>
+      <div>
+        <div class="hideImageStuff">
+          <img class ="imageSize" src="https://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/munchkinhed.png?itok=oeH4evcQ&resize=1100x1100">
+        </div>
+        <h1></h1>
+        <p>
+   
+        </p>
+      </div>
+    </div>
+
+  <!-- <section class="vamp-menu container">
 
     <div class="row">
-      <div class = "col-sm-4">
-        <img src="http://placekitten.com/200/300">
-        <h1>Juicy Vampire Syrum</h1>
+
+      <figure class="col-sm">
+        <div class="blood">
+          <img alt="picture" src="/images/trueblood.jpg">
+        </div>
+        <h1>True Blood Vials</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        </p>
+      </figure>
+
+      <figure class="col-sm">
+        <div class="menus">
+          <img alt="picture" src="/images/bloodpunch.jpg">
+        </div>
+        <h1>Blood Punch</h1>
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p>
+      </figure>
+
+      <figure class="col-sm">
+        <div class="menus">
+          <img alt="picture" src="/images/fangcookies.jpg">
+        </div>
+        <h1>Fang Cookies</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p>
+      </figure>
+    </div> -->
+
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="http://placekitten.com/200/300">
+        <h1>Bloody Cupcakes</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
       </div>
-
-      <div class = "col-sm-4">
+      <div class="col-sm-4">
         <img src="http://placekitten.com/200/300">
-        <h1>Juicy Vampire Syrum</h1>
+        <h1>Drippy Blood Cocktail</h1>
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
       </div>
-
-     <div class = "col-sm-4">
+      <div class="col-sm-4">
         <img src="http://placekitten.com/200/300">
-        <h1>Juicy Vampire Syrum</h1>
+        <h1>Bite Shots</h1>
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
       </div>
     </div>
 
     <div class="row">
-      <div class = "col-sm-4">
+      <div class="col-sm-4">
         <img src="http://placekitten.com/200/300">
-        <h1>Juicy Vampire Syrum</h1>
+        <h1>Slayer Soup</h1>
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
       </div>
 
-      <div class = "col-sm-4">
+      <div class="col-sm-4">
         <img src="http://placekitten.com/200/300">
-        <h1>Juicy Vampire Syrum</h1>
+        <h1>Fresh Bloody Hearts</h1>
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
       </div>
 
-      <div class = "col-sm-4">
+      <div class="col-sm-4">
         <img src="http://placekitten.com/200/300">
-        <h1>Juicy Vampire Syrum</h1>
+        <h1>Flesh Rosebuds</h1>
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
       </div>
     </div>
-  </main>
+
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="http://placekitten.com/200/300">
+        <h1>Cheek Shanks with Blood Reduction</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p>
+      </div>
+    </div>
+    </div>
+  </section>
   <% include ../views/partials/_footer %>
 
 </body>
+
 </html>
