working on bootstrap grid for menus page

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -35,7 +35,7 @@
 <body>
   <% include ../views/partials/_header %>
 
-
+<!-- 
   <div class="flex">
       <div class="containerSize">
         <div class="hideImageStuff">
@@ -65,9 +65,9 @@
    
         </p>
       </div>
-    </div>
+    </div> -->
 
-  <!-- <section class="vamp-menu container">
+  <section class="vamp-menu container">
 
     <div class="row">
 
@@ -102,7 +102,7 @@
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
       </figure>
-    </div> -->
+    </div>
 
     <div class="row">
       <div class="col-sm-4">
