--- a/views/order.ejs
+++ b/views/order.ejs
@@ -56,69 +56,74 @@
       </form>
     </article> -->
     <table>
-      <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Quantity</th>
-        <th>Minus</th>
-        <th>Plus</th>
-      </tr>
-      <tr>
-        <td id="1">Slayer Soup</td>
-        <td>$9.99</td>
-        <td class="quantity">
-          <span>0</span>
-          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
-        </td>
-        <td class="minus"><i class="fas fa-minus-circle"></i></td>
-        <td class="plus"><i class="fas fa-plus-circle"></i></td>
-      </tr><tr>
-        <td id>Blood Punch</td>
-        <td>$9.99</td>
-        <td>
-          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
-          <span>0</span>
-        </td>
-        <td class="minus"><i class="fas fa-minus-circle"></i></td>
-        <td class="plus"><i class="fas fa-plus-circle"></i></td>
-      </tr><tr>
-        <td>Bark of Tree</td>
-        <td>$9.99</td>
-        <td>
-          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
-          <span>0</span>
-        </td>
-        <td class="minus"><i class="fas fa-minus-circle"></i></td>
-        <td class="plus"><i class="fas fa-plus-circle"></i></td>
-      </tr><tr>
-        <td>Shrek's Ear Wax</td>
-        <td>$9.99</td>
-        <td>
-          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
-          <span>0</span>
-        </td>
-        <td class="minus"><i class="fas fa-minus-circle"></i></td>
-        <td class="plus"><i class="fas fa-plus-circle"></i></td>
-      </tr><tr>
-        <td>Tail of Lizard</td>
-        <td>$9.99</td>
-        <td>
-          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
-          <span>0</span>
-        </td>
-        <td class="minus"><i class="fas fa-minus-circle"></i></td>
-        <td class="plus"><i class="fas fa-plus-circle"></i></td>
-      </tr><tr>
-        <td>Leg of Man</td>
-        <td>$9.99</td>
-        <td>
-          <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
-          <span>0</span>
-        </td>
-        <td class="minus"><i class="fas fa-minus-circle"></i></td>
-        <td class="plus"><i class="fas fa-plus-circle"></i></td>
-      </tr>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Quantity</th>
+          <th>Minus</th>
+          <th>Plus</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td id="1">Slayer Soup</td>
+          <td>$9.99</td>
+          <td class="quantity">
+            <span>0</span>
+            <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+          </td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
+          <td class="plus"><i class="fas fa-plus-circle"></i></td>
+        </tr><tr>
+          <td id="2">Blood Punch</td>
+          <td>$9.99</td>
+          <td>
+            <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+            <span>0</span>
+          </td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
+          <td class="plus"><i class="fas fa-plus-circle"></i></td>
+        </tr><tr>
+          <td id="3">Bloody Cupcakes</td>
+          <td>$9.99</td>
+          <td>
+            <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+            <span>0</span>
+          </td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
+          <td class="plus"><i class="fas fa-plus-circle"></i></td>
+        </tr><tr>
+          <td id="4">Drippy Blood Cocktails</td>
+          <td>$9.99</td>
+          <td>
+            <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+            <span>0</span>
+          </td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
+          <td class="plus"><i class="fas fa-plus-circle"></i></td>
+        </tr><tr>
+          <td id="5">Bite Shots</td>
+          <td>$9.99</td>
+          <td>
+            <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+            <span>0</span>
+          </td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
+          <td class="plus"><i class="fas fa-plus-circle"></i></td>
+        </tr><tr>
+          <td id="6">True Blood Vials</td>
+          <td>$9.99</td>
+          <td>
+            <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+            <span>0</span>
+          </td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
+          <td class="plus"><i class="fas fa-plus-circle"></i></td>
+        </tr>
+      </tbody>
     </table>
+
     <form action="/checkout" method="post">
        <button type="submit">Checkout</button>
     </form>
